project6-k8s-nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: nodejs
        image: <dockerhub-username>/k8s-node:v1
        ports:
        - containerPort: 3000
