project6-k8s-nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
  - port: 81
    targetPort: 3000
